# Teleport

./: .copilotignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CAUSEFAIL_L1570024.json  CAUSEFAIL_L51085.json  CLF_AUDIT_COMPLETE_REPORT.txt  CLF_AUDIT_GUARDRAILS.md  CLF_BASELINE_LOCKED_BIJECTION_EXPORT.txt  CLF_BASELINE_LOCKED_PREDICTION_EXPORT.txt  CLF_BIJECTIVE_COMPLETE.py  CLF_CALCULATOR_SPEED_OPTIMIZATION_REPORT.txt  CLF_CAUSAL_MINIMALITY_AUDIT_CORRECTED.txt  CLF_CAUSAL_MINIMALITY_CORRECTED_AUDIT_test_artifacts_20250922.txt  CLF_CODE_EXTRACTION_AUDIT.md  CLF_COHERENT_MATHEMATICAL_REGIME_AUDIT.txt  CLF_COMPLETE_MATHEMATICAL_EVIDENCE.txt  CLF_COMPREHENSIVE_EXTERNAL_AUDIT.txt  CLF_CONSTRUCTION_B_WITNESS.txt  CLF_CORRECTED_EXPORT_pic1.txt  CLF_DOCSTRINGS_APPLIED_REPORT.txt  CLF_EXTERNAL_AUDIT_MATHEMATICAL_SPECIFICATION.txt  CLF_EXTERNAL_AUDIT_pic1_20250918_180507.json  CLF_EXTERNAL_AUDIT_pic1_20250918_180805.json  CLF_EXTERNAL_AUDIT_pic1_20250918_180836.json  CLF_EXTERNAL_AUDIT_pic2_20250918_180949.json  CLF_FINAL_AUDIT.py  CLF_FROZEN_BASELINE_AUDIT.txt  CLF_FROZEN_BASELINE_CONSOLE.txt  CLF_FROZEN_BASELINE_RECEIPTS.jsonl  CLF_FROZEN_BASELINE_RESULTS.csv  CLF_FULL_PIPELINE_EXPORT.txt  CLF_IMMUTABLE_RAILS_DOCUMENTATION.md  CLF_IMPLEMENTATION_CORRECTION_GUIDE.txt  CLF_IMPOSSIBILITY_REFUTED_EXECUTIVE_SUMMARY.md  CLF_ITERATION_PROGRESS_RECORD.md  CLF_LOGICAL_CALCULATOR_SPEED_AUDIT_COMPLETE.txt  CLF_LOGICAL_CALCULATOR_SPEED_COMPLETE_PIC5_PIC6.txt  CLF_MATHEMATICAL_ALIGNMENT.md  (+167 more)
archive/: BINARY_MATH_CLF_CORRECTED_EVIDENCE.txt  CLF_BASELINE_LOCKED_RAILS_AUDIT.txt  CLF_BEHAVIOR_PINNED_FINAL_AUDIT.txt  CLF_BIJECTION_EVIDENCE_PIC5_PIC6.txt  CLF_CODE_EXTRACTION_AUDIT.txt  CLF_COMPLETE_PIPELINE_EXPORT.txt  CLF_CORRECTED_BIJECTION_AUDIT_PIC5_PIC6.txt  CLF_DELTA_OMEGA_UB_ALIGNMENT_COMPLETE.txt  CLF_DRIFT_KILLER_PATCH_REPORT.txt  CLF_DRIFT_KILLER_REPORT.txt  CLF_EXTERNAL_AUDIT_PIC3_PIC4_COMPLETE.txt  CLF_EXTERNAL_BLIND_AUDIT_pic4_pic5_video1_20250922.txt  CLF_EXTERNAL_MATHEMATICAL_AUDIT_test_artifacts_20250922.txt  CLF_IMMUTABLE_PINNING_FINAL_REPORT.txt  CLF_LOGICAL_CALCULATOR_SPEED_MATHEMATICAL_CORRECTIONS_COMPLETE.txt  CLF_MATHEMATICAL_COALESCING_PERFECTION_AUDIT.txt  CLF_MATHEMATICAL_IMPOSSIBILITY_REFUTED_AUDIT.txt  CLF_MATH_EVIDENCE_AUDIT_v2.txt  CLF_MAXIMAL_VALIDATOR_FINAL_CORRECTED.py  CLF_MAXIMAL_VALIDATOR_UNIVERSAL.py  CLF_PIC2_MATHEMATICAL_EVIDENCE.txt  CLF_PIC3_COMPLETE_MATHEMATICAL_AUDIT.txt  CLF_PIC3_RIGOROUS_MATHEMATICAL_AUDIT.txt  CLF_PIC5_MATHEMATICAL_EVIDENCE.txt  CLF_PURE_CALCULATOR.py  CLF_PURE_RESULTS.txt  CLF_SINGLE_SEED_CALCULATOR.py  CLF_SINGLE_SEED_CONSOLE.txt  CLF_SURGICAL_RESULTS.txt  CLF_TELEPORTV10_UNIVERSAL_MINIMALITY_AUDIT.txt  CLF_TELEPORT_BIJECTION_EXPORT.txt  CLF_TELEPORT_BIJECTION_EXPORT_V4.txt  CLF_TELEPORT_BIJECTION_EXPORT_V8_10_pic1.txt  CLF_TELEPORT_BIJECTION_EXPORT_V8_11_pic1.txt  CLF_TELEPORT_BIJECTION_EXPORT_V8_12_FIX1U_UA1.txt  CLF_TELEPORT_BIJECTION_EXPORT_V8_12_FIX1_pic1.txt  CLF_TELEPORT_BIJECTION_EXPORT_V8_12_pic1.txt  CLF_TELEPORT_BIJECTION_EXPORT_V8_2_pic1.txt  CLF_TELEPORT_BIJECTION_EXPORT_V8_4_pic1.txt  CLF_TELEPORT_BIJECTION_EXPORT_V8_7_pic1.txt  (+59 more)
audit/: verification_playbook.py  verify_bijection_receipts.py  verify_calculator_behavior.py
docs/: CLF_BASELINE_LOCKED_FULL_EXPLANATION.txt  CLF_CANONICAL_LEB128_SUCCESS_REPORT.md  CLF_CORRECTIONS_APPLIED.md  CLF_EXTERNAL_AUDIT_MATHEMATICAL_SPECIFICATION.md  CLF_IMPLEMENTATION_CORRECTION_GUIDE.md  CLF_MATHEMATICAL_AUDIT_CORRECTED.md  CLF_MATHEMATICAL_PINS_IRREFUTABLE.md  CLF_NEXT_ITERATION_PLANNING.md  CLF_RIGOROUS_MATHEMATICAL_VALIDATION.txt  CLF_SURGICAL_AUDIT_FINAL.md  CLF_TELEPORT_MATHEMATICAL_AUDIT_SURGICAL_COMPLETE.md  CLF_TELEPORT_STRICT_MATHEMATICAL_ALIGNMENT_GUIDE.md  CLF_UNIVERSAL_FULL_EXPLANATION.txt  CLF_UNIVERSAL_MATHEMATICAL_PROOF.txt  CLF_UNIVERSAL_TEST_FULL_EXPLANATION.txt  CLF_VIDEO1_ARITHMETIC_IDENTITY_INVESTIGATION.txt  ITERATION_SUMMARY_TRUE_CALCULATOR_SPEED_COMPLETE.txt  LINTER_ENHANCEMENT_SUMMARY.md  MATHEMATICAL_CAUSALITY_LANGUAGE_CORRECTIONS.md  MATHEMATICAL_EVIDENCE_SUMMARY.md  MATHEMATICAL_PURITY_AUDIT.md  PIC2_CLF_COMPLETE_MATHEMATICAL_AUDIT.txt  PIC4_CLF_CALCULATOR_MINIMAL_CAUSALITY_AUDIT.txt  PIC5_CLF_CALCULATOR_MINIMAL_CAUSALITY_AUDIT.txt  PIC6_CLF_ETERNAL_MATHEMATICAL_AUDIT.txt  TELEPORT_CODEBASE_OVERVIEW.txt
docs_sphinx/: api_reference.rst  causal_minimality_contract.rst  changelog.rst  (+12 more)
(+218 files in other folders)
